# pyportable-installer

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  CHANGELOG.zh.md  LICENSE  README-dev.md  README-dev.zh.md  README.md  README.zh.base64.html  TODO.md  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements.txt
addons/: readme.md
docs/: add-tkinter-to-embed-python.md  attachments-marks-demonstration.md  developer-readme.zh.md  pyproject template.md  pyproject-manual.md  pyproject-manual.zh.md  pyproject-template-manual.zh.md  pyproject-template.md  pywin32-problems-and-solutions.zh.md
docs/devnote/: capability-issues-about-python-versions.md  currently-known-compilers-issues.md  difference-between-roots.md  dist-folders-structure.md  how-does-pytransform-work.md  how-to-build-dist-tree.md  incapability-issues-about-python-versions.md  pylauncher-cautions.zh.md  pypi-publish-guide.zh.md  pyproject-template-related-code-occurances.md  warnings-about-embed-python.md
embed_python/: README.md  conf.json
embed_python_downloader/: __init__.py  embed_python.py  support.py
examples/dist_project_with_pip_installs/: build.py  main.py  pyproject.json  requirements.txt
examples/dist_pyportable_itself/: build.py  pyproject.json  setup_manual.zh.md
examples/eg_01_hello_world/: pyproject.json
examples/eg_01_hello_world/hello_world/: hello.py
examples/eg_02_pyportable_installer_bootstrap/: build.py  pyproject.json
examples/eg_02_pyportable_installer_bootstrap/requirements_offline/: readme.md
examples/eg_02_pyportable_installer_self_build/: build.py  pyproject.json  setup_manual.zh.md
examples/eg_02_pyportable_installer_self_build/requirements_offline/: readme.md
examples/eg_03_dist_with_pip/: pyproject.json  requirements.txt
examples/hello_world_project/: pyproject.json
examples/hello_world_project/hello_world/: hello.py
examples/pass_params_via_cli/: pyproject.json
examples/pass_params_via_cli/src/: main.py
lib/pyportable_crypto/: __init__.py  decrypt.py  encrypt.py  inject.py  inject_debug.py  keygen.py
lkdist/: __init__.py  checkup.py  prebuild.py
lkdist/bat_2_exe/: bat_2_exe.py  png_2_ico.py
lkdist/template/: bootloader.txt  launch_by_system.bat  launch_core.txt  manifest.json  pyproject.json  pyproject_example.json
pyportable_crypto/: __init__.py  decrypt.py  encrypt.py  inject.py  keygen.py  main.py
pyportable_installer/: __init__.py  __main__.py  _env.py  aftermath.py  assets_copy.py  compiler.py  global_conf.py  global_dirs.py  main.py  no1_extract_pyproject.py  no2_prebuild_pyproject.py  no3_build_pyproject.py  path_model.py  prebuild.py  pretty_print.py  pyarmor_compile.py  step1_extract_pyproject.py  step2_prebuild_pyproject.py  step3_build_pyproject.py  typehint.py  util.py  utils.py  venv_builder.py
pyportable_installer/_vendor/rich_click_ext/: __init__.py  click.py  docstring_analyser.py  extensions.py  global_config.py
pyportable_installer/bat_2_exe/: __init__.py  bat_2_exe.py  png_2_ico.py
pyportable_installer/checkup/: doctor.py
pyportable_installer/compiler/: __init__.py  base.py  compile_by_pyarmor.py  compile_to_pyc.py  py_2_pyd.bat  py_2_pyd.py  pyarmor.py  pyarmor_compiler.py  pyc_compiler.py  select.py  zipimp_loader.py  zipimp_with_pswd.py
pyportable_installer/compilers/: __init__.py  base_compiler.py  cython_compiler.py  effectless_compiler.py  mypyc_compiler.py  nuitka_compiler.py  pyarmor_compile.py  pyc_compiler.py  pyportable_compiler.py  pyportable_encryptor.py  zipapp.py
pyportable_installer/compilers/accessory/: __init__.py  setup_for_cythonize.py
pyportable_installer/compilers/lib/: readme.md
pyportable_installer/compilers/pyportable_runtime/: readme.md
pyportable_installer/embed_python/: __init__.py  manager.py
pyportable_installer/embed_python/download/: readme.md
pyportable_installer/encryption/: __init__.py  py_2_pyd.py  pyarmor_compiler.py
pyportable_installer/main_flow/: __init__.py
pyportable_installer/main_flow/step1/: __init__.py  indexing_paths.py  init_key_params.py  load_conf.py  main.py  name_converter.py  path_formatter.py  where_is_python.py
pyportable_installer/main_flow/step2/: __init__.py  dist_tree.py  prebuild_dist_dirs.py
pyportable_installer/main_flow/step3/: __init__.py  build_dist.py
pyportable_installer/template/: bootloader.txt  launch.bat  launch.sh  launch_by_system.bat  launch_by_venv.bat  launch_for_depsland.bat  pylauncher.txt  pyproject.json  pytransform.txt  readme.md  setup.txt  setup_for_depsland.txt
pyportable_installer/user_interface/: __init__.py  cli.py  gui_on_psg.py  interactive_shell.py
pyportable_installer/venv_assets/: readme.md
shortcut/: build.py  fast_build.py  full_build.py  min_build.py
sidework/: generate_pyportable_crypto_trial_version.py  png_2_ico.py
(+59 files in other folders)
