[tool.poetry]
name = "pyportable-installer"
version = "4.4.2"
homepage = "https://github.com/likianta/pyportable-installer"
description = "Build and distribute portable Python application by all-in-one configuration file."
readme = "README.md"
authors = ["Likianta <likianta@foxmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "^0.5.7"
# embed-python-manager = "^0.2.8"  # DELETE
gen-exe = { version = "*", platform = "win32" }  # DELETE
lk-logger = "^5.6.4"
lk-utils = "^2.9.5"
pyportable-crypto = "^1.1.0"
watchdog = "^3.0.0"

# extras
pillow = { version = "*", optional = true }
pyarmor = { version = "*", optional = true }
pyyaml = { version = "*", optional = true }
toml = { version = "*", optional = true }

[tool.poetry.group.ui.dependencies]
dash = "*"
dash-mantine-components = "*"
feffery-antd-components = "*"
# pysimplegui = "*"
streamlit = { version = "^1.32.0", python = "!=3.9.7" }
# streamlit-antd-components = "*"
streamlit-nested-layout = { version = "*", python = "!=3.9.7" }

[tool.poetry.group.dev.dependencies]
faker = "*"
# lkfmt = "*"

# implicit
numpy = [
    { version = "^1.24.4", platform = "darwin" },
    { version = "^1.26.2", platform = "linux", python = ">=3.9,<4.0" },
    { version = "^1.24.4", platform = "win32" },
]
pandas = [
    { version = "^2.0.3", platform = "darwin" },
    { version = "^2.1.4", platform = "linux", python = ">=3.9,<4.0" },
    { version = "^2.0.3", platform = "win32" },
]

[tool.poetry.extras]
all = ["pillow", "pyarmor", "pyyaml", "toml"]
tml = ["toml"]
yml = ["pyyaml"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.pyportable-installer]
redirect_path = './build/profile.yaml'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
